<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/basic_info_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/app_bar"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/padding_15">

        <ImageButton
            android:id="@+id/btn_back_basic_info"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/margin_15"
            android:background="@drawable/ic_arrow_back"
            android:contentDescription="Go back"
            tools:ignore="HardcodedText" />

        <TextView
            style="@style/TitleFont"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="Personal Information"
            android:textColor="@color/black"
            android:textSize="@dimen/text_20"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="@dimen/margin_20"
        android:elevation="10dp"
        app:cardCornerRadius="60dp">

        <ImageView
            android:id="@+id/avatar_basic_info"
            android:layout_width="@dimen/user_ava_size"
            android:layout_height="@dimen/user_ava_size"
            android:background="@drawable/ic_default_avatar"
            android:contentDescription="@string/user_avatar"
            android:scaleType="centerCrop" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_30">

        <TextView
            style="@style/TextFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_5"
            android:text="Email:"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18"
            tools:ignore="HardcodedText" />

        <com.example.gourmetcompass.utils.EditTextUtil
            android:id="@+id/email_basic_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_5"
            android:text="Username:"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18"
            tools:ignore="HardcodedText" />

        <com.example.gourmetcompass.utils.EditTextUtil
            android:id="@+id/username_basic_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_5"
            android:text="Phone Number:"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18"
            tools:ignore="HardcodedText" />

        <com.example.gourmetcompass.utils.EditTextUtil
            android:id="@+id/phone_basic_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_save_basic_info"
        style="@style/TitleFont"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_50"
        android:background="@drawable/btn_orange"
        android:elevation="5dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_18" />

</LinearLayout>