<resources>
    <string name="app_name">Gourmet</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="detail_btn">Detail</string>
    <string name="menu_btn">Menu</string>
    <string name="gallery_btn">Gallery</string>
    <string name="review_btn">Review</string>
    <string name="desc_title">Description</string>
    <string name="address_title">Address</string>
    <string name="phone_title">Phone Number</string>
    <string name="open_hr_title">Opening Hours</string>
    <string name="star">Star</string>
    <string name="res_bg_image">Restaurant bg image</string>
    <string name="res_ava_image">Restaurant ava image</string>
    <string name="round_btn">Round white btn</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="gallery_img">Gallery image</string>
    <string name="dish_ava">Dish avatar</string>
    <string name="icon">Icon</string>
    <string name="react_count">(%1$d)</string>
    <string name="rating_count">(%1$d)</string>
    <string name="item_ratings">%.1f</string>
    <string name="ratings">%1$s</string>
    <string name="add_to_collection">Add to collection</string>
    <string name="add_a_review">Add a review</string>
    <string name="rate_this_dish">Rate this dish</string>
    <string name="create_new_coll">Create a new collection</string>
    <string name="my_collection">My collection #%1$d</string>
    <string name="submit">Submit</string>
    <string name="new_collection">New collection</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="upload">Upload</string>
    <string name="rate_this_restaurant">Rate this restaurant</string>
    <string name="favorites_restaurants">Favorites Restaurants</string>
    <string name="reply_review">Replying to %1$s</string>
    <string name="description">Description</string>
    <string name="remove_from_collection">Remove from collection</string>
    <string name="pizza">Pizza</string>
    <string name="navigate_to_browse">Navigate_To_Browse</string>
    <string name="background_home_img">background_home_img</string>
    <string name="older_wiser">The older, the wiser</string>
    <string name="top_reviewed">Top reviewed</string>
    <string name="home">Home</string>
    <string name="browse">Browse</string>
    <string name="map">Map</string>
    <string name="notification">Notification</string>
    <string name="account">Account</string>
    <string name="gourmet_s_choice">Gourmet\'s choice</string>
    <string name="search">Search</string>
    <string name="go_to_search_view">Go to search view</string>
    <string name="recent_searches">Recent searches</string>
    <string name="popular_searches">Popular searches</string>
    <string name="recommended">Recommended</string>
    <string name="guest">Guest</string>
    <string name="personal_information">Personal Information</string>
    <string name="my_collections">My Collections</string>
    <string name="my_reviews">My Reviews</string>
    <string name="change_password">Change Password</string>
    <string name="request_edit">Request to add/edit a restaurant</string>
    <string name="log_out">Log Out</string>
    <string name="back_to_previous_page">Back to previous page</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="most_reviewed">Most Reviewed</string>
    <string name="nearest">Nearest</string>
    <string name="restaurants">Restaurants</string>
    <string name="dishes">Dishes</string>
    <string name="restaurant_description">Description</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="account_ava">Account ava</string>
    <string name="type">Type</string>
    <string name="n_results">%1$d results</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="user_avatar">User avatar</string>
    <string name="take_photo">Take Photo</string>
    <string name="photo_library">Photo Library</string>
    <string name="edit_avatar">Edit avatar</string>
    <string name="empty">Empty</string>
    <string name="add_your_first_collection">Add your first collection!</string>
    <string name="default_web_client_id">374546131077-cbp3d6id9u8cq7kvo0mp9qmu7e4cng8i.apps.googleusercontent.com</string>
    <string name="no_items">You have no items for now</string>
    <string name="no_reviews">You have no reviews for now</string>
    <string name="add_some_items">Add some items here</string>
    <string name="add_some_reviews">Write your first review</string>
    <string name="ratings_title">Ratings (%.1f/5.0)</string>
    <string name="ratings_title_na">Ratings (N/A)</string>
    <string name="first_to_review">Be the first person to write a review</string>
    <string name="rename_collection">Rename collection</string>
    <string name="delete_collection">Delete collection</string>
    <string name="top_categories">Top categories</string>
    <string name="_1_result">1 result</string>
    <string name="empty_search">No results</string>
    <string name="noti_description">noti_description</string>
    <string name="show_replies">Show all replies</string>
    <string name="edit_review">Edit review</string>
    <string name="delete_review">Delete review</string>
    <string name="edit_reply">Edit reply</string>
    <string name="delete_reply">Delete reply</string>
    <string name="replying_to">"Replying to "</string>
    <string name="in_res_name">in %1$s</string>
    <string name="liked_review">Someone liked your review</string>
    <string name="disliked_review">Someone disliked your review</string>
    <string name="replied_review">Someone replied to your review</string>
    <string name="you_are_all_set">You are all set!</string>
    <string name="log_in_to_see_noti">Log in to see your notifications</string>
    <string name="mark_as_unread">Mark as unread</string>
    <string name="remove_notification">Remove notification</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="send_email">Send email</string>
    <string name="res_thumbnail">Restaurant thumbnail</string>


</resources>