<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding_15"
    tools:context=".views.general.LogInFragment"
    tools:ignore="HardcodedText">

    <ImageView
        android:id="@+id/account_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:background="@drawable/ic_app_name"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_20">

        <TextView
            style="@style/TextFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_5"
            android:text="Email:"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18" />

        <com.example.gourmetcompass.utils.EditTextUtil
            android:id="@+id/email_log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!--        <RelativeLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginBottom="@dimen/margin_15"-->
        <!--            tools:ignore="HardcodedText">-->

        <!--            <EditText-->
        <!--                android:id="@+id/email_log_in"-->
        <!--                style="@style/TextFont"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_centerVertical="true"-->
        <!--                android:autofillHints="text"-->
        <!--                android:background="@drawable/input_text_field"-->
        <!--                android:hint="Enter email"-->
        <!--                android:inputType="textEmailAddress"-->
        <!--                android:padding="12dp"-->
        <!--                android:selectAllOnFocus="true"-->
        <!--                android:textColor="@color/black" />-->

        <!--            <ImageView-->
        <!--                android:id="@+id/edit_text_field_icon"-->
        <!--                android:layout_width="24dp"-->
        <!--                android:layout_height="24dp"-->
        <!--                android:layout_alignEnd="@+id/email_log_in"-->
        <!--                android:layout_centerVertical="true"-->
        <!--                android:layout_marginEnd="13dp"-->
        <!--                android:contentDescription="Edit text" />-->

        <!--        </RelativeLayout>-->

        <TextView
            style="@style/TextFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_5"
            android:text="Password:"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18" />

        <com.example.gourmetcompass.utils.EditTextUtil
            android:id="@+id/password_log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!--        <RelativeLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginBottom="@dimen/margin_15"-->
        <!--            tools:ignore="HardcodedText">-->

        <!--            <EditText-->
        <!--                android:id="@+id/password_log_in"-->
        <!--                style="@style/TextFont"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_centerVertical="true"-->
        <!--                android:autofillHints="text"-->
        <!--                android:background="@drawable/input_text_field"-->
        <!--                android:hint="Enter password"-->
        <!--                android:inputType="textPassword"-->
        <!--                android:padding="12dp"-->
        <!--                android:selectAllOnFocus="true"-->
        <!--                android:textColor="@color/black" />-->

        <!--            <ImageView-->
        <!--                android:layout_width="24dp"-->
        <!--                android:layout_height="24dp"-->
        <!--                android:layout_alignEnd="@+id/password_log_in"-->
        <!--                android:layout_centerVertical="true"-->
        <!--                android:layout_marginEnd="13dp"-->
        <!--                android:contentDescription="Edit text" />-->

        <!--        </RelativeLayout>-->


    </LinearLayout>

    <TextView
        android:id="@+id/forgot_pass"
        style="@style/TitleFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/margin_15"
        android:layout_marginEnd="30dp"
        android:text="Forgot password?"
        android:textColor="@color/black"
        android:textSize="@dimen/text_18" />

    <Button
        android:id="@+id/btn_log_in_mid"
        style="@style/TitleFont"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="@dimen/margin_20"
        android:layout_marginTop="70dp"
        android:background="@drawable/btn_orange"
        android:elevation="5dp"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_15"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@color/input_text_border" />

        <TextView
            style="@style/TitleFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_10"
            android:text="or"
            android:textColor="@color/input_text_border"
            android:textSize="@dimen/text_16" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@color/input_text_border" />

    </LinearLayout>

    <Button
        android:id="@+id/google_btn"
        style="@style/TitleFont"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginHorizontal="@dimen/margin_20"
        android:layout_marginVertical="@dimen/margin_15"
        android:background="@drawable/border_gg_sign_in"
        android:drawableStart="@drawable/ic_gg"
        android:paddingHorizontal="@dimen/padding_30"
        android:paddingVertical="@dimen/padding_10"
        android:text="Log in with Google"
        android:textAllCaps="false"
        android:textSize="@dimen/text_18"
        android:visibility="gone" />

    <TextView
        style="@style/TitleFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="@dimen/margin_30"
        android:text="Don't have an account?"
        android:textColor="@color/input_text_border"
        android:textSize="@dimen/text_16" />

    <Button
        android:id="@+id/btn_sign_up_bot"
        style="@style/TitleFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="30dp"
        android:background="@android:color/transparent"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_20" />

</LinearLayout>